// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reporter exports should support renderError() without statsOptions 1`] = `
"Webpack server-side compilation failed

ERROR in ./test/configs/files/syntax-error.js
Module parse failed: test/configs/files/syntax-error.js Unexpected token (4:0)
You may need an appropriate loader to handle this file type.
| 
| console.log('Hello!'
| 
"
`;

exports[`reporter exports should support renderStats() without statsOptions 1`] = `
"[1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
[1m[32mclient.js[39m[22m  2.69 kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main
"
`;

exports[`reporter human errors should not warn about human errors if options.humanErrors = false 1`] = `
"• Compiling...
✓ Compilation succeeded (10ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset     Size  Chunks             Chunk Names
    client.js  x.xx kB       0  [emitted]  main

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset     Size  Chunks             Chunk Names
    client.js  x.xx kB       0  [emitted]  main

"
`;

exports[`reporter human errors should warn about all human errors 1`] = `
"WARN: Server \`output.target\` in webpack config should be set to \`node\`
See https://webpack.js.org/configuration/target/#target
WARN: Server \`output.libraryTarget\` in webpack config should be set to \`this\` or \`commonjs2\`
See https://webpack.js.org/configuration/output/#output-librarytarget
WARN: Server \`devtool\` in webpack config should be set to \`source-map\` or \`inline-source-map\`
In addition, you must use https://github.com/evanw/node-source-map-support to enable source maps.

• Compiling...
✓ Compilation succeeded (10ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset     Size  Chunks             Chunk Names
    client.js  x.xx kB       0  [emitted]  main

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size  Chunks             Chunk Names
    client.js  x.xx kB       0  [emitted]  main

"
`;

exports[`reporter should dispose the created reporter if .run() throws 1`] = `
"• Compiling...
✓ Compilation succeeded (10ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset     Size  Chunks             Chunk Names
    client.js  x.xx kB       0  [emitted]  main

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset     Size  Chunks             Chunk Names
    server.js  x.xx kB       0  [emitted]  main

"
`;

exports[`reporter should dispose the created reporter if .watch() throws 1`] = `
"• Compiling...
✓ Compilation succeeded (10ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset     Size  Chunks             Chunk Names
    client.js  x.xx kB       0  [emitted]  main

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset     Size  Chunks             Chunk Names
    server.js  x.xx kB       0  [emitted]  main

"
`;

exports[`reporter should not display stats if options.stats = false 1`] = `
"• Compiling...
✓ Compilation succeeded (10ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset     Size  Chunks             Chunk Names
    client.js  x.xx kB       0  [emitted]  main

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset     Size  Chunks             Chunk Names
    server.js  x.xx kB       0  [emitted]  main

• Compiling...
✓ Compilation succeeded (10ms)

"
`;

exports[`reporter should only display stats in the first compilation if options.stats = 'once' 1`] = `
"• Compiling...
✓ Compilation succeeded (10ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset     Size  Chunks             Chunk Names
    client.js  x.xx kB       0  [emitted]  main

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset     Size  Chunks             Chunk Names
    server.js  x.xx kB       0  [emitted]  main

• Compiling...
✓ Compilation succeeded (10ms)

"
`;

exports[`reporter should report a ENOENT error while compiling, hiding the stack 1`] = `
"• Compiling...
✖ Compilation failed

    ENOENT: foo

"
`;

exports[`reporter should report a TypeError error while compiling 1`] = `
"• Compiling...
✖ Compilation failed

    TypeError: foo
    [stack]

"
`;

exports[`reporter should report a failed compilation 1`] = `
"• Compiling...
✖ Compilation failed

    Webpack server-side compilation failed

    ERROR in ./test/configs/files/syntax-error.js
    Module parse failed: test/configs/files/syntax-error.js Unexpected token (4:0)
    You may need an appropriate loader to handle this file type.
    | 
    | console.log('Hello!'
    | 

"
`;

exports[`reporter should report a fatal error while compiling 1`] = `
"• Compiling...
✖ Compilation failed

    foo
    [stack]

"
`;

exports[`reporter should report a successful compilation 1`] = `
"• Compiling...
✓ Compilation succeeded (10ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset     Size  Chunks             Chunk Names
    client.js  x.xx kB       0  [emitted]  main

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset     Size  Chunks             Chunk Names
    server.js  x.xx kB       0  [emitted]  main

"
`;

exports[`reporter should use options.statsOptions when printing stats 1`] = `
"• Compiling...
✓ Compilation succeeded (10ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Hash: a15ebe812cb1f543fee8
        Asset     Size  Chunks             Chunk Names
    client.js  x.xx kB       0  [emitted]  main

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Hash: 6d89c4db2970e36fc5c3
        Asset     Size  Chunks             Chunk Names
    server.js  x.xx kB       0  [emitted]  main

"
`;
